--- a/archive.html
+++ b/archive.html
@@ -63,14 +63,14 @@
        ドミニオン大会を開催しました！16名の方に参加していただき、各ブロック4人ずつに分かれて行いました。優勝したAさんには「Discord内での称号（ロール）」「来月の部内標語を決める権利」「ミニ景品」「ミニ賞状」が贈呈されました！おめでとうございます😊</br>
        定期開催していく予定ですので、またご参加ください！</br></br></br>
       2021年6月25日　</br></br>
-       <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="100%" height="100%"class="layer-img4"></br></br></br>
+       <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="100%" height="80%"class="layer-img4"></br></br></br>
 
        <b>↓大会ルール</b></br>
       <img src="https://media.discordapp.net/attachments/835703913042018338/857953809073176596/image0.png?width=1500&height=1043" alt="大会ルール" width="500px" height="300px"class="layer-img4"></br></br></br>
        <b>↓決勝戦サプライ</b></br>
-      <img src="https://media.discordapp.net/attachments/840252564242956298/858613036252266506/6F719532-A756-414A-8BED-3E86D2106366_4_5005_c.jpeg" alt="ドミニオン大会" width="400px" height="200px"class="layer-img4"></br></br></br>
+      <img src="https://media.discordapp.net/attachments/840252564242956298/858613036252266506/6F719532-A756-414A-8BED-3E86D2106366_4_5005_c.jpeg" alt="決勝サプライ" width="500px" height="200px"class="layer-img4"></br></br></br>
       <b>↓優勝者ロール</b></br>
-      <img src="https://media.discordapp.net/attachments/840252564242956298/858613065221668864/21403D36-2DC1-49C0-9799-4728803AC0D6_4_5005_c.jpeg" alt="優勝者ロール" width="400px" height="200px"class="layer-img4"></br></br></br>
+      <img src="https://media.discordapp.net/attachments/840252564242956298/858613065221668864/21403D36-2DC1-49C0-9799-4728803AC0D6_4_5005_c.jpeg" alt="優勝者ロール" width="500px" height="200px"class="layer-img4"></br></br></br>
 
 
     </br>
@@ -113,7 +113,7 @@
        <!-- ポップアップの中身 -->
        <b>2021年5月22日　オンライン説明会を追加開催</b><br>
        対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。</br>
-      <img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="キャッチョコ" width="80%" height="100%"class="layer-img2">
+      <img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="キャッチョコ" width="600px" height="400px"class="layer-img2">
         <!-- ./ポップアップの中身　ここまで -->
     </div>
     </br>
