--- a/archive.html
+++ b/archive.html
@@ -63,7 +63,7 @@
        ドミニオン大会を開催しました！16名の方に参加していただき、各ブロック4人ずつに分かれて行いました。優勝したAさんには「Discord内での称号（ロール）」「来月の部内標語を決める権利」「ミニ景品」「ミニ賞状」が贈呈されました！おめでとうございます😊</br>
        定期開催していく予定ですので、またご参加ください！</br></br></br>
       2021年6月25日　</br></br>
-       <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="100%" height="80%"class="layer-img4"></br></br></br>
+       <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="700px height="550px"class="layer-img4"></br></br></br>
 
        <b>↓大会ルール</b></br>
       <img src="https://media.discordapp.net/attachments/835703913042018338/857953809073176596/image0.png?width=1500&height=1043" alt="大会ルール" width="500px" height="300px"class="layer-img4"></br></br></br>
@@ -154,7 +154,7 @@
        両日合わせて100名程度の方にご参加いただきました。ありがとうございました！
     </br>
     </br>
-      <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="80%" height="100%"class="layer-img">
+      <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="500px" height="300px"class="layer-img">
         <!-- ./ポップアップの中身　ここまで -->
     </div></br>
     </br>
