--- a/archive.html
+++ b/archive.html
@@ -51,6 +51,13 @@
            
           <div class="face-photo">
 
+
+  
+</br></br>
+<div class="heading2"><i>　　6月　　</i></div>
+</br></br>
+
+
 <div class="pop-box3">
   <label for="popup-on3"><label for="popup-on3"><div class="btn-open3"><img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="" width="380" height="290"class="layer-img3"></div></label>
   <input type="checkbox" id="popup-on3">
@@ -73,13 +80,10 @@
       <img src="https://media.discordapp.net/attachments/840252564242956298/858613065221668864/21403D36-2DC1-49C0-9799-4728803AC0D6_4_5005_c.jpeg" alt="優勝者ロール" width="500px" height="200px"class="layer-img4"></br></br></br>
 
 
-    </br>
-    </br>
-
         <!-- ./ポップアップの中身　ここまで -->
     </div>
     <label for="popup-on3"><div class="btn-close3">閉じる</div></label>
-  </div>
+  </div></div>
 
   <div class="pop-box4">
   <label for="popup-on4"><label for="popup-on4"><div class="btn-open4"><img src="https://pbs.twimg.com/media/E4iWfJQVEAAtPwH?format=jpg&name=medium" alt="" width="380" height="290"class="layer-img4"></div></label>
@@ -102,7 +106,11 @@
     </div>
     <br>
     <label for="popup-on4"><div class="btn-close4">閉じる</div></label>
-  </div>
+  </div></div>
+
+</br></br>
+<div class="heading2"><i>　　5月　　</i></div>
+</br></br>
 
 <div class="pop-box2">
   <label for="popup-on2"><label for="popup-on2"><div class="btn-open2"><img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="" width="380" height="290"class="layer-img2"></div></label>
