--- a/archive.html
+++ b/archive.html
@@ -65,8 +65,8 @@
     <label for="popup-on3" class="icon-close3">×</label>
     <div class="popup-content3">
        
-       <!-- ポップアップの中身 -->
-       <b>ドミニオン大会開催</b><br>
+       <!-- ポップアップの中身 --></br>
+       <b>ドミニオン大会開催</b></br>
        ドミニオン大会を開催しました！16名の方に参加していただき、各ブロック4人ずつに分かれて行いました。優勝したAさんには「Discord内での称号（ロール）」「来月の部内標語を決める権利」「ミニ景品」「ミニ賞状」が贈呈されました！おめでとうございます😊</br>
        定期開催していく予定ですので、またご参加ください！</br></br></br>
       2021年6月25日　</br></br>
@@ -93,7 +93,8 @@
     <div class="popup-content4">
 
        <!-- ポップアップの中身 -->
-       <b>ポスター掲載</b><br>
+       </br>
+       <b>ポスター掲載</b></br>
        青山キャンパス中庭にポスターが掲載され始めました！</br></br>
 
       <img src="https://pbs.twimg.com/media/E4iWfJQVEAAtPwH?format=jpg&name=medium" alt="ポスター" width="98%" height="100%" class="layer-img3">
@@ -104,7 +105,7 @@
 
         <!-- ./ポップアップの中身　ここまで -->
     </div>
-    <br>
+    </br>
     <label for="popup-on4"><div class="btn-close4">閉じる</div></label>
   </div></div>
 
@@ -118,8 +119,8 @@
   <div class="popup2">
     <label for="popup-on2" class="icon-close2">×</label>
     <div class="popup-content2">
-       <!-- ポップアップの中身 -->
-       <b>2021年5月22日　オンライン説明会を追加開催</b><br>
+       <!-- ポップアップの中身 --></br>
+       <b>2021年5月22日　オンライン説明会を追加開催</b></br></br>
        対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。</br>
       <img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="キャッチョコ" width="600px" height="400px"class="layer-img2">
         <!-- ./ポップアップの中身　ここまで -->
@@ -157,12 +158,12 @@
   <div class="popup">
     <label for="popup-on" class="icon-close">×</label>
     <div class="popup-content">
-       <!-- ポップアップの中身 -->
-       <b>2021年4月9日、10日　新歓オンライン説明会開催</b><br>
+       <!-- ポップアップの中身 --></br>
+       <b>2021年4月9日、10日　新歓オンライン説明会開催</b></br></br>
        両日合わせて100名程度の方にご参加いただきました。ありがとうございました！
     </br>
     </br>
-      <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="500px" height="300px"class="layer-img">
+      <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="600px" height="400px"class="layer-img">
         <!-- ./ポップアップの中身　ここまで -->
     </div></br>
     </br>
