--- a/home.html
+++ b/home.html
@@ -124,7 +124,7 @@
             <div class="news-heading">
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「民兵で蓋をする」</font></a></i></b></big>
             </br></br>
-            </div>
+            </div></br></br>
         
             </div>  
 
