--- a/archive.html
+++ b/archive.html
@@ -169,6 +169,11 @@
     </br>
     <label for="popup-on"><div class="btn-close">閉じる</div></label>
   </div>
+                                                
+                                                
+</br></br>
+<a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+<div class="content-right">
 
 <div class="content-right">
 
