--- a/home.html
+++ b/home.html
@@ -51,6 +51,8 @@
     <!-- 追加 -->
 <body oncontextmenu="return false">
     
+    <meta name="google-site-verification" content="KCLb6-Op6-ADlz_yJIcKNA3COkgdtU7mqoUtGI-mcKc" />
+    
 </head>
 
 <body>
