--- a/home.html
+++ b/home.html
@@ -124,7 +124,7 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </br></br>
             <div class="news-heading">
-            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「民兵で蓋をする」</font></a></i></b></big>
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「本部をさがキャンに」</font></a></i></b></big>
             </br></br>
             </div></br></br>
         
