--- a/home.html
+++ b/home.html
@@ -123,8 +123,11 @@
             <a class="twitter-timeline"  href="https://twitter.com/bodogebu_?ref_src=twsrc%5Etfw"data-chrome="noscrollbar"	data-height="350px">Tweets by bodogebu_</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </br></br>
-            <div class="news-heading">
+            <div class="news-heading"><div class="tooltip2">
+                
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「本部をさがキャンに」</font></a></i></b></big>
+
+            <div class="description2"><big>6月に行われた「ドミニオン大会」で見事優勝を勝ち取った部員Aさんに、優勝賞品として獲得した「来月の標語を考える権利」で考えてもらったもの。</big></div></div>
             </br></br>
             </div></br></br>
         
