--- a/home.html
+++ b/home.html
@@ -127,7 +127,7 @@
                 
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「本部をさがキャンに」</font></a></i></b></big>
 
-            <div class="description2"><big>6月に行われた「ドミニオン大会」で見事優勝を勝ち取った部員Aさんに、獲得した「来月の標語を考える権利」で考えてもらいました。</big></div></div>
+            <div class="description2"><big>6月に行われたドミニオン大会で見事優勝を勝ち取った部員Aさんに、獲得した「来月の標語を考える権利」で考えてもらいました。</big></div></div>
             </br></br>
             </div></br></br>
         
