--- a/archive.html
+++ b/archive.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/archive.css">
     <script src="components/loader.js"></script>
     <script>
-        //
-        // TODO: Write JavaScript code here
-        //
     </script>
       <!-- ページのタイトル -->
   <title>活動アーカイブ</title>
@@ -36,10 +33,10 @@
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
 
-  <link rel="stylesheet" href="./archive.css" /> <!-- CSSファイルを読み込む -->
+  <link rel="stylesheet" href="./archive.css" />
 
-  
 </head>
+    
 <body>
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
@@ -51,8 +48,6 @@
            
           <div class="face-photo">
 
-
-  
 </br></br>
 <div class="heading2"><i>　　6月　　</i></div>
 </br></br>
