--- a/home.html
+++ b/home.html
@@ -125,9 +125,9 @@
             </br></br>
             <div class="news-heading"><div class="tooltip2">
                 
-            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「本部をさがキャンに」</font></a></i></b></big>
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「手札を信じて行かネバダ」</font></a></i></b></big>
 
-            <div class="description2"><big>&nbsp;6月に行われたドミニオン大会で見事優勝を勝ち取った部員Aさんに、獲得した「来月の標語を考える権利」で考えてもらいました。</big></div></div>
+            <div class="description2"><big>&nbsp;匿名で公募された22標語の中から大賞と審査員特別賞のW受賞を果たした。理由はオモロいから。　応募者不明</big></div></div>
             </br></br>
             </div></br></br>
         
