--- a/slogan.html
+++ b/slogan.html
@@ -59,7 +59,7 @@
             
              <div class="tooltip2">
                 <p><big><b>8月　「手札を信じて行かネバダ」　　　　　</b></big></p>
-            <div class="description2"><big>　6月に行われた「ドミニオン大会」で見事優勝を勝ち取った部員Aさんに、優勝賞品として獲得した「来月の標語を考える権利」で考えてもらったものです。Aさんの所属キャンパスについて考察の幅が広がる、深みのある標語となっています。</br>（by 副代表） </big></div></div>
+            <div class="description2"><big>　匿名で公募された22標語の中から大賞と審査員特別賞のW受賞を果たした。理由はオモロいから。　応募者不明 </big></div></div>
 
             </br></br></br>
              
