--- a/slogan.html
+++ b/slogan.html
@@ -57,6 +57,12 @@
 
          <div class="profile">
             
+            <div class="tooltip2">
+                <p><big><b>9月　「ダイスは振るものではなく振られるもの」　　　　　</b></big></p>
+            <div class="description2"><big>　匿名で公募された22標語の中から審査員特別賞に選ばれました。とても共感できる標語です。 </big></div></div>
+
+            </br></br></br>
+         
              <div class="tooltip2">
                 <p><big><b>8月　「手札を信じて行かネバダ」　　　　　</b></big></p>
             <div class="description2"><big>　匿名で公募された22標語の中から大賞と審査員特別賞のW受賞を果たした。理由はオモロいから。　応募者不明 </big></div></div>
