--- a/archive.html
+++ b/archive.html
@@ -49,6 +49,35 @@
           <div class="face-photo">
 
 </br></br>
+<div class="heading2"><i>　　10月　　</i></div>
+</br></br>
+
+
+<div class="pop-box5">
+  <label for="popup-on5"><label for="popup-on5"><div class="btn-open5"><img src="https://pbs.twimg.com/media/E_NtvSeUcAEwVdI?format=png&name=medium" alt="" width="380" height="290"class="layer-img5"></div></label>
+  <input type="checkbox" id="popup-on5">
+  <div class="popup5">
+    <label for="popup-on5" class="icon-close5">×</label>
+    <div class="popup-content5">
+       
+       <!-- ポップアップの中身 -->
+       <b>スプラトゥーン大会開催</b><br>
+       Splatoon2の大会を開催しました！各チーム4人ずつ、計20名の部員にご参加いただきました！。優勝チームは「キル専」でした。おめでとうございます👏</br></br></br>
+      2021年10月2日　</br></br>
+       <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="700px height="550px"class="layer-img4"></br></br></br>
+
+       <b>優勝チーム「キル専」</b></br>
+      <img src="https://pbs.twimg.com/media/FArqhLnVEAA_VQw?format=jpg&name=small" alt="決勝サプライ" width="616px" height="397px"class="layer-img4"></br></br></br>
+      <b>記念ロール</b></br>
+      <img src="https://pbs.twimg.com/media/FArqhLoVQAM9Ssq?format=jpg&name=900x900" alt="優勝者ロール" width="750px" height="346px"class="layer-img4"></br></br></br>
+
+
+        <!-- ./ポップアップの中身　ここまで -->
+    </div>
+    <label for="popup-on5"><div class="btn-close5">閉じる</div></label>
+  </div></div>
+              
+</br></br>
 <div class="heading2"><i>　　6月　　</i></div>
 </br></br>
 
