--- a/archive.html
+++ b/archive.html
@@ -61,11 +61,9 @@
     <div class="popup-content5">
        
        <!-- ポップアップの中身 -->
-       <b>スプラトゥーン大会開催</b><br>
+       </br></br><b>スプラトゥーン大会開催</b><br>
        Splatoon2の大会を開催しました！各チーム4人ずつ、計20名の部員にご参加いただきました！。優勝チームは「キル専」でした。おめでとうございます👏</br></br></br>
       2021年10月2日　</br></br>
-       <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="700px height="550px"class="layer-img4"></br></br></br>
-
        <b>優勝チーム「キル専」</b></br>
       <img src="https://pbs.twimg.com/media/FArqhLnVEAA_VQw?format=jpg&name=small" alt="決勝サプライ" width="616px" height="397px"class="layer-img4"></br></br></br>
       <b>記念ロール</b></br>
