--- a/home.html
+++ b/home.html
@@ -97,9 +97,9 @@
           <div class="news-list">
               
               <div class="news-list-content">
-                <div class="news-list-title">■対面活動について（21.6.18）←New!</div>
+                <div class="news-list-title">■後期対面活動（21.10.1）←New!</div>
                 <div class="news-list-description">
-                    オンライン活動を続けて参りましたが、本日、大学から7月1日より対面での課外活動を認めるとの連絡がありました。つきましては、7月2日（金）から対面活動を再開したいと考えています。6月中は全てオンライン活動になりますので、よろしくお願いします。                 
+                    10月から対面活動が再開します。入部は通年で受け付けています。                
                 </div>
             <hr width="400px">
               
