--- a/home.html
+++ b/home.html
@@ -97,7 +97,14 @@
           <div class="news-list">
               
               <div class="news-list-content">
-                <div class="news-list-title">■後期対面活動（21.10.1）←New!</div>
+                <div class="news-list-title">■相模原支部開通（21.10.18）←New!</div>
+                <div class="news-list-description">
+                    希望者多数につき、相模原キャンパスでも活動を開始しました！日時や教室は引き続きTwitterにて告知しておりますので、チェックしてください！                
+                </div>
+                  <hr width="400px">
+              
+              <div class="news-list-content">
+                <div class="news-list-title">■後期対面活動（21.10.1）</div>
                 <div class="news-list-description">
                     10月から対面活動が再開します。入部は通年で受け付けています。                
                 </div>
