--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
               <div class="news-list-content">
                 <div class="news-list-title">■相模原支部開通（21.10.18）←New!</div>
                 <div class="news-list-description">
-                    希望者多数につき、相模原キャンパスでも活動を開始しました！日時や教室は引き続きTwitterにて告知しておりますので、チェックしてください！                
+                    希望者多数につき、相模原キャンパスでも活動を開始しました！                
                 </div>
                   <hr width="400px">
               
