--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
             <div class="news-list-content">
                 <div class="news-list-title">■オンライン入部〆切（21.5.31）</div>
                 <div class="news-list-description">
-                    オンライン上のみでの入部受付を5月いっぱいで終了しました。今後入部希望の方は、対面活動に来ていただいてから入部していただく形になります。
+                    オンライン上のみでの入部受付を5月いっぱいで終了しました。今後入部希望の方は、対面活動内で入部していただく形になります。
                 </div>
             <hr width="400px">
             </div>
@@ -132,9 +132,9 @@
             </br></br>
             <div class="news-heading"><div class="tooltip2">
                 
-            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「妨害しても勝利はない　」</font></a></i></b></big>
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「プレイを憎んで人を憎まず　」</font></a></i></b></big>
 
-            <div class="description2"><big>&nbsp;大体妨害している間に負ける。匿名で公募された22標語の中から選びました。</big></div></div>
+            <div class="description2"><big>&nbsp;私は許せないよ。山賊で白金貨落とされたら。-戦闘民族の心得ですね。</big></div></div>
             </br></br>
             </div></br></br>
         
