--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@
                 
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「プレイを憎んで人を憎まず　」</font></a></i></b></big>
 
-            <div class="description2"><big>&nbsp;私は許せないよ。山賊で白金貨落とされたら。-戦闘民族の心得ですね。</big></div></div>
+            <div class="description2"><big>&nbsp;私は許せないよ。山賊で白金貨落とされたら。</big></div></div>
             </br></br>
             </div></br></br>
         
