--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
         
       <div class="contents-wrapper-inner">
         <div class="content-left">
-          <div class="face-photo"><img src="IMG_6074.jpg" alt="ロゴ" width="300" height="300"></div>
+          <div class="face-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/905639051321835520/image0.jpg?width=1042&height=1042" alt="ロゴ" width="300" height="300"></div>
           <div class="profile">
             青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
             <br/><span style="color:#F5F5F5">顧問　横山徹先生</span><br/>
