--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
         <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" ><span style=background-color:#e5e5f7;>🚀活動アーカイブ</span></a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" ><span style=background-color:#e5e5f7;>🪐幹部紹介</span></a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="about.html" ><span style=background-color:#e5e5f7;>🌐このHPについて</span></a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" ><span style=background-color:#e5e5f7;>さがキャン支部終末時計</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="clock.html" ><span style=background-color:#e5e5f7;>さがキャン支部終末時計</span></a></div>
       </div>
     </div>
     <div class="contents-wrapper">
