--- a/clock.html
+++ b/clock.html
@@ -35,13 +35,13 @@
         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　相模原支部終末時計　　</i></div>
       <div class="contents-wrapper-inner">
-      <img src="d_water.png" alt="ロゴ" width="275" height="150">
+      <center><img src="d_water.png" alt="ロゴ" width="275" height="150"></center>
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
         <center>相模原キャンパスでも活動がしたい！との声が多くあがり、相模原支部を試運転中のボドゲ部。しかし、思ったよりも活動参加者数がおらず、はやくも解散の危機！？どうなる、相模原支部––––</br>
-        このページでは、相模原支部終末時計をご覧にいただけます。</br></br><span style="color:#B0B0BD">考え中〜。</span></center></br></br><small>
-        </small>
+        <small>このページでは、相模原支部終末時計をご覧にいただけます。</small></br></br><span style="color:#B0B0BD">考え中〜。</span></center></br></br>
+        
         </div>
         <div class="news-heading">
               <br/>
