--- a/clock.html
+++ b/clock.html
@@ -39,7 +39,7 @@
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
-        <center>相模原キャンパスでも活動がしたい！との声が多くあがり、相模原支部を試運転中のボドゲ部。しかし、思ったよりも活動参加者数がおらず、はやくも解散の危機！？どうなる、相模原支部––––</br>
+        <center>相模原キャンパスでも活動がしたい！との声が多くあがり、相模原支部を試運転中のボドゲ部。</br>しかし、思ったよりも活動参加者数がおらず、はやくも解散の危機！？</br>どうなる、相模原支部––––</br>
         <small>このページでは、相模原支部終末時計をご覧にいただけます。</small></br></br><span style="color:#B0B0BD">考え中〜。</span></center></br></br>
         
         </div>
