--- a/clock.html
+++ b/clock.html
@@ -35,7 +35,7 @@
         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　相模原支部終末時計　　</i></div>
       <div class="contents-wrapper-inner">
-      <center><img src="d_water.png" alt="ロゴ" width="275" height="150"></center>
+      <center><img src="https://media.discordapp.net/attachments/840252564242956298/905836032161902602/d0f5ee8a8dd25cb6.png?width=1042&height=1042" alt="ロゴ" width="300" height="300"></center>
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
@@ -46,14 +46,18 @@
         <div class="news-heading">
               <br/>
 </div></div></div>
-        </br></br></br>
+        </br></br>
 
 <div class="content-left2">
         
-        HP作成時の参考文献</br>
-        ・<a href="http://abehiroshi.la.coocan.jp/" ><font color="white">阿部寛のホームページ</font></a></br>
-        ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" ><font color="white">阿部寛と学ぶHTMLチュートリアル</font></a></br>
-        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">Cssだけで実装!画像をクリックしてポップアップ表示する方法</font></a></br>
+        ログ</br>
+        ・<a href="http://abehiroshi.la.coocan.jp/" ><font color="white">相模原支部活動開始　-50分</font></a></br>
+        ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" ><font color="white">総務が相模原支部用のロゴを作る　-30分</font></a></br>
+        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">相模原支部長が顧問の先生を捕獲　-70分</font></a></br>
+        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">木曜の活動に誰もこない説が提唱される　+50分</font></a></br>
+        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">本当に誰も来なかった　+150分</font></a></br>
+
+
         </div>
 
 
