--- a/clock.html
+++ b/clock.html
@@ -33,14 +33,14 @@
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
-      <div class="heading"><i>　　相模原支部終末時計　　</i></div>
+      <div class="heading"><i>　　さがキャン支部終末時計　　</i></div>
       <div class="contents-wrapper-inner">
       <center><img src="https://media.discordapp.net/attachments/840252564242956298/905836032161902602/d0f5ee8a8dd25cb6.png?width=1042&height=1042" alt="ロゴ" width="300" height="300"></center>
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
-        </br><center><i><span style="color:#000000">相模原キャンパスでも活動がしたい！との声が多くあがり、相模原支部を試運転中のボドゲ部。</br>しかし、思ったよりも活動参加者がおらず、はやくも解散の危機！？</br>どうなる、相模原支部––––––––</span></i></br></br></br>
-        <small>このページでは、相模原支部終末時計をご覧いただけます。一緒に相模原支部の活動を応援してください。</small></br></br><span style="color:#B0B0BD">考え中〜。</span></center></br></br>
+        </br><center><i><span style="color:#000000">相模原キャンパスでも活動がしたい！との声が多くあがり、さがキャン支部を試運転中のボドゲ部。</br>しかし、思ったよりも活動参加者がおらず、はやくも解散の危機！？</br>どうなる、さがキャン支部––––––––</span></i></br></br></br>
+        <small>このページでは、さがキャン支部終末時計をご覧いただけます。一緒にさがキャン支部の活動を応援してください。</small></br></br><span style="color:#B0B0BD">考え中〜。</span></center></br></br>
         
         </div>
         <div class="news-heading">
@@ -51,9 +51,9 @@
 <div class="content-left2">
         
         ログ</br>
-        ・<a href="http://abehiroshi.la.coocan.jp/" ><font color="white">相模原支部活動開始　-50分</font></a></br>
-        ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" ><font color="white">総務が相模原支部用のロゴを作る　-30分</font></a></br>
-        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">相模原支部長が顧問の先生を捕獲　-70分</font></a></br>
+        ・<a href="http://abehiroshi.la.coocan.jp/" ><font color="white">さがキャン支部活動開始　-50分</font></a></br>
+        ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" ><font color="white">総務がさがキャン支部用のロゴを作る　-30分</font></a></br>
+        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">さがキャン支部長が顧問の先生を捕獲　-70分</font></a></br>
         ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">木曜の活動に誰もこない説が提唱される　+50分</font></a></br>
         ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">本当に誰も来なかった　+150分</font></a></br>
 
