--- a/clock.html
+++ b/clock.html
@@ -51,11 +51,11 @@
 <div class="content-left2">
         
         ログ</br>
-        ・<a href="http://abehiroshi.la.coocan.jp/" ><font color="white">さがキャン支部活動開始　-50分</font></a></br>
-        ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" ><font color="white">総務がさがキャン支部用のロゴを作る　-30分</font></a></br>
-        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">さがキャン支部長が顧問の先生を捕獲　-70分</font></a></br>
-        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">木曜の活動に誰もこない説が提唱される　+50分</font></a></br>
-        ・<a href="https://homepagenopro.com/html/css_popup.html" ><font color="white">本当に誰も来なかった　+150分</font></a></br>
+        ・<font color="white">さがキャン支部活動開始　-50分</font></br>
+        ・<font color="white">総務がさがキャン支部用のロゴを作る　-30分</font></br>
+        ・<font color="white">さがキャン支部長が顧問の先生を捕獲　-70分</font></br>
+        ・<font color="white">木曜の活動に誰もこない説が提唱される　+50分</font></br>
+        ・<font color="white">本当に誰も来なかった　+150分</font></br>
 
 
         </div>
