--- a/clock.html
+++ b/clock.html
@@ -40,22 +40,22 @@
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
         </br><center><i><span style="color:#000000">相模原キャンパスでも活動がしたい！との声が多くあがり、さがキャン支部を試運転中のボドゲ部。</br>しかし、思ったよりも活動参加者がおらず、はやくも解散の危機！？</br>どうなる、さがキャン支部––––––––</span></i></br></br></br>
-        <small>このページでは、さがキャン支部終末時計をご覧いただけます。一緒にさがキャン支部の活動を応援してください。</small></br></br><span style="color:#B0B0BD">考え中〜。</span></center>
+        <small>このページでは、さがキャン支部終末時計をご覧いただけます。一緒にさがキャン支部の活動を応援してください。</small></br></br><span style="color:#B0B0BD">11時まで戻ったら達成です</span></center>
         
         </div>
         <div class="news-heading">
               <br/>
 </div></div></div>
-        </br></br>
+        </br>
 
 <div class="content-left2">
         
         ログ</br>
-        ・<font color="white">さがキャン支部活動開始　-50分</font></br>
-        ・<font color="white">総務がさがキャン支部用のロゴを作る　-30分</font></br>
-        ・<font color="white">さがキャン支部長が顧問の先生を捕獲　-70分</font></br>
-        ・<font color="white">木曜の活動に誰もこない説が提唱される　+50分</font></br>
-        ・<font color="white">本当に誰も来なかった　+150分</font></br>
+        ・<font color="white">[10/20]　さがキャン支部活動開始　-50分</font></br>
+        ・<font color="white">[10/24]　総務がさがキャン支部用のロゴを作る　-50分</font></br>
+        ・<font color="white">[10/26]　さがキャン支部長が顧問の先生を捕獲　-70分</font></br>
+        ・<font color="white">[11/3]　木曜の活動に誰もこない説が提唱される　+30分</font></br>
+        ・<font color="white">[11/4]　本当に誰も来なかった　+138分</font></br>
 
 
         </div>
