--- a/clock.html
+++ b/clock.html
@@ -35,7 +35,7 @@
         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　さがキャン支部終末時計　　</i></div>
       <div class="contents-wrapper-inner">
-      <center><img src="https://media.discordapp.net/attachments/840252564242956298/905836032161902602/d0f5ee8a8dd25cb6.png?width=1042&height=1042" alt="ロゴ" width="300" height="300"></center>
+      <center><img src="https://media.discordapp.net/attachments/840252564242956298/905836032161902602/d0f5ee8a8dd25cb6.png?width=1042&height=1042" alt="ロゴ" width="300" height="300"><span style="color:#B0B0BD">あと[3]分</span></center>
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
