--- a/clock.html
+++ b/clock.html
@@ -35,12 +35,12 @@
         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　さがキャン支部終末時計　　</i></div>
       <div class="contents-wrapper-inner">
-      <center><img src="https://media.discordapp.net/attachments/840252564242956298/905836032161902602/d0f5ee8a8dd25cb6.png?width=1042&height=1042" alt="ロゴ" width="300" height="300"><span style="color:#FFFFFF"></br>あと [3] 分</span></center>
+      <center><img src="https://media.discordapp.net/attachments/840252564242956298/905836032161902602/d0f5ee8a8dd25cb6.png?width=1042&height=1042" alt="ロゴ" width="300" height="300"><span style="color:#FFFFFF"></br>あと [2] 分</span></center>
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
         </br><center><i><span style="color:#000000">相模原キャンパスでも活動がしたい！との声が多くあがり、さがキャン支部を試運転中のボドゲ部。</br>しかし、思ったよりも活動参加者がおらず、はやくも解散の危機！？</br>どうなる、さがキャン支部––––––––</span></i></br></br></br>
-        <small>このページでは、さがキャン支部終末時計をご覧いただけます。一緒にさがキャン支部の活動を応援してください。</small></br></br><span style="color:#B0B0BD">11時まで戻ったら達成です</span></center>
+        <small>このページでは、さがキャン支部終末時計をご覧いただけます。</br>一緒にさがキャン支部の活動を応援してください。</small></br></br><span style="color:#B0B0BD">11時まで戻ったら達成です</span></center>
         
         </div>
         <div class="news-heading">
