--- a/clock.html
+++ b/clock.html
@@ -53,7 +53,7 @@
         ログ</br>
         ・<font color="white">[10/20]　さがキャン支部活動開始　-50分</font></br>
         ・<font color="white">[10/24]　総務がさがキャン支部用のロゴを作る　-50分</font></br>
-        ・<font color="white">[10/26]　さがキャン支部長が顧問の先生を捕獲　-70分</font></br>
+        ・<font color="white">[10/26]　支部長が顧問の先生を捕獲　-70分</font></br>
         ・<font color="white">[11/3]　木曜の活動に誰もこない説が提唱される　+30分</font></br>
         ・<font color="white">[11/4]　本当に誰も来なかった　+138分</font></br>
 
