--- a/clock.html
+++ b/clock.html
@@ -40,7 +40,7 @@
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
         </br><center><i><span style="color:#000000">相模原キャンパスでも活動がしたい！との声が多くあがり、さがキャン支部を試運転中のボドゲ部。</br>しかし、思ったよりも活動参加者がおらず、はやくも解散の危機！？</br>どうなる、さがキャン支部––––––––</span></i></br></br></br>
-        <small><small>このページでは、さがキャン支部終末時計をご覧いただけます。</small></small></br><small><small>一緒にさがキャン支部の活動を応援してください。</small></small></br><span style="color:#B0B0BD">11時まで戻ったら達成です</span></center>
+        <small><small>このページでは、さがキャン支部終末時計をご覧いただけます。</small></small></br><small><small>一緒にさがキャン支部の活動を応援してください!!</small></small></br><span style="color:#B0B0BD">11時まで戻ったら達成です</span></center>
         
         </div>
         <div class="news-heading">
