--- a/clock.html
+++ b/clock.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
@@ -8,6 +9,8 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="css/about.css">
 
+    <meta name="description" content="さがキャン支部の活動を一緒に応援してください！" />
+    
       <!-- ホーム画面に追加したときの画像 -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
