--- a/home.html
+++ b/home.html
@@ -85,10 +85,12 @@
           
           <div class="news-heading">★★★　各種SNS　★★★</div>
           <div class="profile-english">
-            　<a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
+            <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
-            <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>　
-             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a></br></br></br>
+            <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
+            <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
+            <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
+              </br></br></br>
               </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br><span style="color:black">　　　総務は耳をすませばが好き　</span><img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
           </div>
           <div class="mail">
