--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
-              </br></br>▼さがキャン支部</br>
+              </br></br><span style="color:white">▼さがキャン支部</span></br>
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
               </br></br></br>
