--- a/home.html
+++ b/home.html
@@ -83,12 +83,13 @@
             　　　　2021年度 117名
           </div>
           
-          <div class="news-heading">★★★　各種SNS　★★★</div>
+          <div class="news-heading">★★★　SNS　★★★</div>
           <div class="profile-english">
+              <center><span style="color:white">青山　　</span></center>
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
-              </br><center><span style="color:white">各種SNS（相模原）　</span></center>
+              </br><center><span style="color:white">相模原　　</span></center>
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
               </br></br></br>
