--- a/home.html
+++ b/home.html
@@ -89,7 +89,7 @@
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
-              </br><span style="color:white">相模原　　</span></be>
+              </br><span style="color:white">相模原　　</span></br>
             <a href="https://twitter.com/sagakyan_BG"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/sagakyan_bg"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
               </br></br></br>
