--- a/home.html
+++ b/home.html
@@ -78,7 +78,8 @@
             青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
             <br/><span style="color:#F5F5F5">顧問　横山徹先生</span><br/>
             <b>活動場所</b>　青山→17号館／相模原→F棟<br/>
-            <b>活動日時</b>　青山→週3日/月金(18:30~)&nbsp;土(13:00~)／相模原→木(17:00~)<br/>
+            <b>活動日時</b></br>
+            青山→週3日/月金(18:30~)&nbsp;土(13:00~)</br>相模原→木(17:00~)<br/>
             <b>部員数</b>　2020年度 22名<br/>
             　　　　2021年度 124名
           </div>
