--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
             <b>活動場所</b></br>
                 青山→17号館／相模原→F棟<br/>
             <b>活動日時</b></br>
-                青山→週3日/月金(18:30~)&nbsp;土(13:00~)</br>
+                青山→月金(18:30~)&nbsp;土(13:00~)</br>
                 相模原→木(17:00~)<br/>
             <b>部員数</b></br>
                 2020年度 22名<br/>
