--- a/archive.html
+++ b/archive.html
@@ -65,14 +65,34 @@
        Splatoon2の大会を開催しました！各チーム4人ずつ、計20名の部員にご参加いただきました！。優勝チームは「キル専」でした。おめでとうございます👏</br></br></br>
       2021年10月2日　</br></br>
        <b>優勝チーム「キル専」</b></br>
-      <img src="https://pbs.twimg.com/media/FArqhLnVEAA_VQw?format=jpg&name=small" alt="決勝サプライ" width="616px" height="397px"class="layer-img4"></br></br></br>
+      <img src="https://pbs.twimg.com/media/FArqhLnVEAA_VQw?format=jpg&name=small" alt="優勝チーム" width="616px" height="397px"class="layer-img6"></br></br></br>
       <b>記念ロール</b></br>
-      <img src="https://pbs.twimg.com/media/FArqhLoVQAM9Ssq?format=jpg&name=900x900" alt="優勝者ロール" width="750px" height="346px"class="layer-img4"></br></br></br>
+      <img src="https://pbs.twimg.com/media/FArqhLoVQAM9Ssq?format=jpg&name=900x900" alt="記念ロール" width="750px" height="346px"class="layer-img6"></br></br></br>
 
 
         <!-- ./ポップアップの中身　ここまで -->
     </div>
     <label for="popup-on5"><div class="btn-close5">閉じる</div></label>
+  </div></div>
+
+<div class="pop-box6">
+  <label for="popup-on6"><label for="popup-on6"><div class="btn-open6"><img src="https://pbs.twimg.com/media/FC2BK-paIAAwDom?format=jpg&name=large" alt="" width="380" height="290"class="layer-img6"></div></label>
+  <input type="checkbox" id="popup-on6">
+  <div class="popup6">
+    <label for="popup-on6" class="icon-close6">×</label>
+    <div class="popup-content6">
+       
+       <!-- ポップアップの中身 -->
+       </br></br><b>青山祭</b><br>
+       2021年度青山祭に参加しました！参加してくれた部員の皆さん、また、ご来場してくださった皆様、ありがとうございました。少しでもボードゲームの楽しさが伝わっていれば幸いです！</br></br></br>
+      2021年10月31日　</br></br>
+       <b>たくさんのボードゲームが集まりました</b></br>
+      <img src="https://pbs.twimg.com/media/FC2xxU3acAAQJCQ?format=jpg&name=large" alt="ボドゲ" width="616px" height="397px"class="layer-img6"></br></br></br>
+
+
+        <!-- ./ポップアップの中身　ここまで -->
+    </div>
+    <label for="popup-on6"><div class="btn-close6">閉じる</div></label>
   </div></div>
               
 </br></br>
