--- a/archive.html
+++ b/archive.html
@@ -138,9 +138,9 @@
        <b>ポスター掲載</b><br>
        青山キャンパス中庭にポスターが掲載され始めました！</br></br>
 
-      <img src="https://pbs.twimg.com/media/E4iWfJQVEAAtPwH?format=jpg&name=medium" alt="ポスター" width="98%" height="100%" class="layer-img3">
-      <img src="https://media.discordapp.net/attachments/840252564242956298/858615471540142081/8573e581eee8d7dc.png?width=737&height=1042" alt="ポスター" width="48%" height="100%" class="layer-img3">
-      <img src="https://pbs.twimg.com/media/E4iWfJNVkAUShzC?format=jpg&name=medium" alt="ポスター" width="48%" height="100%" class="layer-img3">
+      <img src="https://pbs.twimg.com/media/E4iWfJQVEAAtPwH?format=jpg&name=medium" alt="ポスター" width="616" height="397" class="layer-img3">
+      <img src="https://media.discordapp.net/attachments/840252564242956298/858615471540142081/8573e581eee8d7dc.png?width=737&height=1042" alt="ポスター" width="397" height="616" class="layer-img3">
+      <img src="https://pbs.twimg.com/media/E4iWfJNVkAUShzC?format=jpg&name=medium" alt="ポスター" width="397" height="616" class="layer-img3">
       </br></br>2021年6月23日　</br></br>
 
 
