--- a/home.html
+++ b/home.html
@@ -89,15 +89,15 @@
           
           <div class="news-heading">★★★　SNS　★★★</div>
           <div class="profile-english">
-            <span style="color:white">&nbsp;青山</span></br>&nbsp;
+            <span style="color:white">&nbsp;青山キャンパス</span></br>&nbsp;
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
-              </br><span style="color:white">&nbsp;相模原</span></br>&nbsp;
+              </br><span style="color:white">&nbsp;相模原キャンパス</span></br>&nbsp;
             <a href="https://twitter.com/sagakyan_BG"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/sagakyan_bg"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
               </br></br></br>
-              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　<span style="color:black"></span><img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
+              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　　<span style="color:black"></span><img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
           </div>
           <div class="mail">
         
