--- a/clock.html
+++ b/clock.html
@@ -59,7 +59,7 @@
         ・<font color="white">[10/26]　支部長が顧問の先生を捕獲　-70分</font></br>
         ・<font color="white">[11/3]　木曜の活動に誰もこない説が提唱される　+30分</font></br>
         ・<font color="white">[11/4]　本当に誰も来なかった　+138分</font></br>
-        ・<font color="white">[11/10]　さがキャン支部の公式Twitterが開設される　+150分</font></br>
+        ・<font color="white">[11/10]　さがキャン支部の公式Twitterが開設される　-150分</font></br>
         </br>
         </br>
 
