--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
-        <center>このホームページはボードゲーム愛好会の部員によって運営されています。</br>
+        <center>このホームページはボードゲーム愛好会の部員によって運営されています。
         何かあればTwitterまたはPeing質問箱からお問い合わせください。</br></br><span style="color:#B0B0BD">Mississippi←ミシシッピのスペルにはsが2×2個、ｐが2個あり、それらがiで挟まれています。</span></center></br></br><small>
         HP作成日：21.5.22</br>
-        最終更新：21.11.5
+        最終更新：21.11.11
         </small>
         </div>
         <div class="news-heading">
