--- a/home.html
+++ b/home.html
@@ -142,7 +142,7 @@
             </br></br>
             <div class="news-heading"><div class="tooltip2">
                 
-            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「さむい朝から　電車に揺られ　時間が来るまで　重ゲやる」</font></a></i></b></big>
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「さむい朝から　電車に揺られ</br>時間が来るまで　重ゲやる」</font></a></i></b></big>
 
             <div class="description2"><big>&nbsp;重役出勤をしないボドゲ部員の冬の土曜日。（応募された中から選ばれた標語）</big></div></div>
             </br></br>
