--- a/archive.html
+++ b/archive.html
@@ -49,6 +49,29 @@
           <div class="face-photo">
 
 </br></br>
+<div class="heading2"><i>　　11月　　</i></div>
+</br></br>
+              <div class="pop-box7">
+  <label for="popup-on7"><label for="popup-on7"><div class="btn-open7"><img src="https://pbs.twimg.com/media/E_NtvSeUcAEwVdI?format=png&name=medium" alt="" width="380" height="290"class="layer-img7"></div></label>
+  <input type="checkbox" id="popup-on7">
+  <div class="popup7">
+    <label for="popup-on7" class="icon-close7">×</label>
+    <div class="popup-content7">
+       
+       <!-- ポップアップの中身 -->
+       </br></br><b>ゲームマーケット2021秋に遠征しました！</b><br>
+       ゲムマ秋にボドゲ部から6、7名が買い出しに行ってきました〜！全員大満足の結果だったようです。戦利品で遊ぶのが楽しみですね😊</br></br></br>
+      2021年11月20日　</br></br>
+       <b>戦利品</b></br>
+      <img src="https://pbs.twimg.com/media/FEn_LHrVQAQUW0Y?format=jpg&name=medium" alt="ゲムマ戦利品" width="616px" height="397px"class="layer-img"></br></br></br>
+
+
+        <!-- ./ポップアップの中身　ここまで -->
+    </div>
+    <label for="popup-on7"><div class="btn-close7">閉じる</div></label>
+  </div></div>
+              
+</br></br>
 <div class="heading2"><i>　　10月　　</i></div>
 </br></br>
 
