--- a/archive.html
+++ b/archive.html
@@ -52,7 +52,7 @@
 <div class="heading2"><i>　　11月　　</i></div>
 </br></br>
               <div class="pop-box7">
-  <label for="popup-on7"><label for="popup-on7"><div class="btn-open7"><img src="https://pbs.twimg.com/media/E_NtvSeUcAEwVdI?format=png&name=medium" alt="" width="380" height="290"class="layer-img7"></div></label>
+  <label for="popup-on7"><label for="popup-on7"><div class="btn-open7"><img src="https://pbs.twimg.com/media/FEn_LHrVQAQUW0Y?format=jpg&name=medium" alt="" width="380" height="290"class="layer-img7"></div></label>
   <input type="checkbox" id="popup-on7">
   <div class="popup7">
     <label for="popup-on7" class="icon-close7">×</label>
