--- a/aboutus.html
+++ b/aboutus.html
@@ -114,7 +114,7 @@
         <img src=" https://bodoge-bu.github.io/github.io/d_smile.png" alt="アイコン" width="200" height="200"class="layer-img"></div>
 
          <div class="profile4">
-            <big><b>出目 良郎　</b>
+            <big><b>出目 良郎　</b><span style="color:#B0B0BD">Deme Yoshiro</span>
             
              <a href="https://twitter.com/bodogebu_"><small>@bodogebu_</small></a>
             
