--- a/aboutus.html
+++ b/aboutus.html
@@ -114,9 +114,9 @@
         <img src=" https://bodoge-bu.github.io/github.io/d_smile.png" alt="アイコン" width="200" height="200"class="layer-img"></div>
 
          <div class="profile4">
-            <big><b>出目 良郎　</b><span style="color:#B0B0BD">Deme Yoshiro</span>
+            <big><b>出目 良郎　</b>
             
-             <a href="https://twitter.com/bodogebu_"><small>@bodogebu_</small></a>
+             <a href="https://twitter.com/bodogebu_"><small>@bodogebu_</small></a> <span style="color:#B0B0BD">Deme Yoshiro</span>
             
             <br/>
             1996年、神奈川県生まれ。1と2と3の面が二面ずつある珍しいサイコロのため桃鉄の面接には落ちたが、CoCでは期待の新人と噂された。2020年、神話生物が怖いという理由でCoCダイスを辞職。職を探していたところボドゲ部のマスコットの求人が出ていたので応募してみたら受かった。時給は悪いが、やりがいのある仕事だと感じている。幹部ではない。
