--- a/home.html
+++ b/home.html
@@ -97,7 +97,7 @@
             <a href="https://twitter.com/sagakyan_BG"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/sagakyan_bg"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
               </br></br></br>
-              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　　<span style="color:black"></span><img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
+              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　　<span style="color:black"></span><img src="https://media.discordapp.net/attachments/840252564242956298/917801055083982848/export_49.png" alt="ゆるキャラ" width="120" height="120">
           </div>
           <div class="mail">
         
