--- a/aboutus.html
+++ b/aboutus.html
@@ -47,6 +47,8 @@
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+         <div class="heading"><i>　　2022年度 幹部紹介　　</i></div>
+         <span style="color:#FFFFFF">Coming Soon...</span>
       <div class="heading"><i>　　2021年度 幹部紹介　　</i></div>
       <div class="contents-wrapper-inner">
           
@@ -111,7 +113,7 @@
            
           <div class="face-photo">
 
-        <img src="https://media.discordapp.net/attachments/840252564242956298/917731175307563018/export.png" alt="アイコン" width="200" height="200"class="layer-img"></div>
+        <img src="d_smile.png" alt="アイコン" width="200" height="200"class="layer-img"></div>
 
          <div class="profile4">
             <big><b>出目 良郎　</b>
