--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
         //
     </script>
       <!-- ページのタイトル -->
-  <title>2021年度 ボドゲ部幹部紹介</title>
+  <title>ボドゲ部幹部紹介</title>
 
   <!-- ページの説明 -->
   <meta name="description" content="ボードゲーム愛好会ボドゲ部の幹部紹介ページです。" />
