--- a/home.html
+++ b/home.html
@@ -147,6 +147,7 @@
             <div class="description2"><big>&nbsp;重役出勤をしないボドゲ部員の冬の土曜日。（応募された中から選ばれた標語）</big></div></div>
             </br></br>
             </div></br></br>
+<a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
         
             </div>  
 
