--- a/home.html
+++ b/home.html
@@ -146,8 +146,9 @@
 
             <div class="description2"><big>&nbsp;重役出勤をしないボドゲ部員の冬の土曜日。（応募された中から選ばれた標語）</big></div></div>
             </br></br>
+<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920254540081684520/25697896-97ED-4A51-9A0F-09B7673DA448_4_5005_c.jpeg" alt="ツイッター" width="1198" height="269"></a>
             </div></br></br>
-<a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
+
         
             </div>  
 
