--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <title>ボードゲーム愛好会 ボドゲ部（公認）</title>
 
   <!-- ページの説明 -->
-  <meta name="description" content="ボードゲーム愛好会ボドゲ部の公式ホームページです。" />
+  <meta name="description" content="青山学院大学の公認サークル、ボードゲーム愛好会ボドゲ部の公式ホームページです。週3回、月、金、土曜日に、17号館にて活動しています。" />
 
   <!-- 文字エンコードの指定 -->
   <meta charset="utf-8" />
